--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,23 @@
+database:
+  driverClass: org.h2.Driver
+  user: sa
+  password: sa
+  url: jdbc:h2:./target/example
+#  properties:
+#    charSet: UTF-8
+#    hibernate.dialect: org.hibernate.dialect.H2Dialect
+
+server:
+  applicationConnectors:
+    - type: http
+      port: 8080
+  adminConnectors:
+    - type: http
+      port: 8081
+
 logging:
   level: INFO
   loggers:
     com.epam: DEBUG
+    org.hibernate.SQL:
+      level: DEBUG
